--- a/www/index.html
+++ b/www/index.html
@@ -121,6 +121,7 @@
   <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
   <script src="lib/angular-lazy-img/release/angular-lazy-img.min.js"></script>
   <script src="http://maps.google.com/maps/api/js?key=AIzaSyCXxLksgerM_doBbmpZ7sRjxLaNJfbLY6I&libraries=places,geometry&sensor=false"></script>
+  <script src="lib/ionic-ratings/dist/ionic-ratings.min.js"></script>
 </head>
 
 <body ng-app="starter" ng-controller="AppCtrl">
