add feedback feature

--- a/www/index.html
+++ b/www/index.html
@@ -78,6 +78,7 @@
   <script src="js/controllers/GiftCtrl.js"></script>
   <script src="js/controllers/SurveysCtrl.js"></script>
   <script src="js/controllers/TeamCtrl.js"></script>
+  <script src="js/controllers/FeedbackCtrl.js"></script>
   <!-- services -->
   <script src="js/services/general-services.js"></script>
   <script src="js/services/socialmedia-oath-services.js"></script>
